# rust-url-shortener

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  postman_collection.json
migrations/: 2025-02-14-create-shortlink-table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs
src/config/: db.rs  redis.rs
src/db/: db.rs
src/handlers/: handlers.rs  health_check.rs  mod.rs
src/models/: mod.rs  shorten_response.rs
src/routes/: mod.rs  routes.rs
src/utils/: mod.rs  rate_limit.rs  validate.rs
src/views/: index.rs  not_found.rs
