[package]
name = "time_to_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.43", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11.6"
regex = "1.11"
deadpool-postgres = "0.14.1"
thiserror = "*"
qrcode = "0.14.1"
image = "0.25.5"
base64 = "0.22.1"
redis = {version = "0.29", features = ["tokio-comp"]}
